objects/cloudswarm__Opportunity_Swarm_Rule__c.object
<CustomObject>
    <description>A rule indicating what users should auto-follow an Opportunity in Chatter.</description>
    <fields>
        <fullName>cloudswarm__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudswarm__Notify_on_Swarm__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>You will receive a Chatter message if you automatically follow a record.</inlineHelpText>
        <label>Notify on Swarm?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cloudswarm__Opportunity_Amount__c</fullName>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cloudswarm__Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudswarm__Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudswarm__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Opportunities</fullName>
                </value>
                <value>
                    <fullName>Only Opportunities for Accounts I Own</fullName>
                </value>
                <value>
                    <fullName>Only Opportunities above a certain amount</fullName>
                </value>
                <value>
                    <fullName>Only Opportunities that reach a certain stage in the sales process</fullName>
                </value>
                <value>
                    <fullName>Only Opportunities of a certain Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cloudswarm__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Swarm_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Opportunity Swarm Rule</label>
    <listViews>
        <fullName>cloudswarm__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OSR-{0000}</displayFormat>
        <label>Opportunity Swarm Rule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Swarm Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>